Fixed z-index issue
Fixed z-index issue making home image link unclickable.

--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -5,7 +5,8 @@
 		img {
 			@include center(y);
 			padding: 15px 0 10px 0;
-	
+			z-index: 1;
+			
 			@include breakpoint(bp-medium) {
 				@include center(none);
 			}
@@ -14,6 +15,8 @@
 }
 
 .primary-menu {
+	position:relative;
+	z-index: 0;
 	.menu-primary-container {
 		position: relative;
 		@include transition(all, 0.5s, ease-in-out);
